comentarios nos detalhes:
- não permitir envio fracionado do estoque
- ajuste da loja para entrada de colaboradores
- adição do campo instruções no cadastro de colaboradores
- retirada da copia para os administradores do email de novo lote
- retirada dos lotes fake da lista do relatorio
- ajuste de labels no cadastro de produtos do lote
- ajuste no email de compra do lote para adicionar a informacao do
colaborador caso seja um lote de colaborador

--- a/html/templates/product_stock.html
+++ b/html/templates/product_stock.html
@@ -125,9 +125,11 @@
                       {% trans "Ordenar pelo status" as order_status %}
                       <a title="{{ order_status }}" href="javascript:void(0);">{% trans "Status" %} <i class="fa fa-fw fa-sort-amount-asc"></i></a>
                   </th>
+{% comment %}
                   {% if user|has_shipment_perm:'add_shipment' or user|has_shipment_perm:'add_fbm_shipment' %}
                   <th class="center">{% trans "Envio" %}</th>
                   {% endif %}
+{% endcomment %}
                   <th class="center"> {% trans "Visualizar" %}</th>
                 </tr>
               </thead>
@@ -244,6 +246,7 @@
                       <!-- fim box -->
                       {% endif %}
                   </td>
+{% comment %}
                   {% if user|has_shipment_perm:'add_shipment' or user|has_shipment_perm:'add_fbm_shipment' %}
                       <td class="center">
                           {% if product.status == 2 and product.user == request.user %}
@@ -253,6 +256,7 @@
                           {% endif %}
                       </td>
                   {% endif %}
+{% endcomment %}
                   <td class="center">
                       <a class=" download" href="{% url 'product_details' product.id %}"><i class="fa fa-pencil-square"></i>  {% trans "Visualizar" %}</a>
                   </td>
