--- a/html/templates/store_list.html
+++ b/html/templates/store_list.html
@@ -106,7 +106,7 @@
 
               <!-- A classe parceiro deve ser inserida, como está abaixo, quando o box for de um lote de parceiro-->
 
-              <div class="box-container-lote parceiro">
+              <div class="box-container-lote{% if lot.collaborator %} parceiro{% endif %}">
                  {% is_subscriber user lot=lot as is_user_subscriber %}
                  {% if is_user_subscriber %}
                  <a href="{% url 'store_lot_details' lot.id %}" class="box-lote{% if lot.status == 2 %} vendido{% endif %}">
@@ -130,21 +130,19 @@
                         <p class="lucro-prod">{% trans "Lucro" %}: U$ {{ lot.profit|localize }}</p>
                         <p class="lucro-prod">{% trans "Número de Itens" %}: {{ lot.products_quantity }}</p>
                         <p class="lucro-prod">{% trans "ROI" %}: {{ lot.average_roi|localize }}% | Rank: {{ lot.average_rank|localize }}%</p>
-
+                        {% if lot.collaborator %}
                         <!--Conteúdo novo -->
-                        <p class="lucro-prod parceiro-titulo"><strong>Vendido por:  </strong>Felisberto</p>
-
+                        <p class="lucro-prod parceiro-titulo"><strong>{% trans "Vendido por" %}:  </strong>{{ lot.collaborator.name }}</p>
                         <!--
-
                         Esse conteúdo abaixo é o rating. Só deve aparecer nos lotes que são de parceiros
                         abaixo coloquei uma classe pra data avaliacao. de um até cinco por extenso. cada classe vai mostrar o número de estrelas.
                         -->
-
-                        <div class="rating dois">
+                        {% stars lot.collaborator.rating as stars_rating %}
+                        <div class="rating {{ stars_rating }} ">
                             <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
                         </div>
-
-                         <-- Fim conteúdo novo -->
+                         <!-- Fim conteúdo novo -->
+                        {% endif %}
                      </div>
                  </a>
               </div>
