--- a/html/templates/base_shipment_details.html
+++ b/html/templates/base_shipment_details.html
@@ -42,9 +42,11 @@
                   {% if shipment.status == 1 and user|has_service_perm:'add_product' or shipment.status > 1 %}
                   <th>{% trans "Serviços" %}</th>
                   {% endif %}
+{% comment %}
                   {% if shipment.status == 1 and user|has_shipment_perm:'change_shipment' and shipment.is_archived is False and shipment.is_canceled is False %}
                   <th>{% trans "Retirar" %}</th>
                   {% endif %}
+{% endcomment %}
                 </tr>
               </thead>
               <tbody>
@@ -79,12 +81,14 @@
                   {% endif %}
                   </td>
                   {% endif %}
+{% comment %}
                   {% if shipment.status == 1 and user|has_shipment_perm:'change_shipment' and shipment.is_archived is False and shipment.is_canceled is False %}
                   {% trans "Excluir" as delete %}
                   <td>
                       <a class="btn btn-danger delete-product-shipment" title="{{ delete }} {{ product.product.name }}" href="#" data-delete-product-shipment-id="{{ shipment.id }}" data-delete-product-product-id="{{ product.id }}"><i class="fa fa-fw fa-close"></i></a>
                   </td>
                   {% endif %}
+{% endcomment %}
                 </tr>
               {% endfor %}
               </tbody>
