--- a/html/templates/store_lot_details.html
+++ b/html/templates/store_lot_details.html
@@ -14,7 +14,7 @@
               {% if lot.collaborator %}
               <!-- bloco de informação do colaborador. Só aparece quando um colaborador fr o vendedor do lote -->
               <div class="col-md-3 content-partner">
-                  <p>{% trans "Produto vendido pelo colaborador" %}:</p>
+                  <p>{% trans "Lote vendido pelo colaborador" %}:</p>
                   <img src="/static/img/team/1.png" /><br /><br />
                   <div class="infos-parceiro ">
                       <p><strong>{{ lot.collaborator.name }}</strong> </p>
