--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -301,7 +301,7 @@
                 <div class="col-md-2">
                     <ul class="list-inline quicklinks">
                         <li>
-                            <a href="{% url 'terms' %}">{% trans "Termos" %}</a>
+                            <a href="{% url 'terms' %}">{% trans "Termos e Condições de Uso" %}</a>
                             <!--<a href="{% url 'help' %}">{% trans "Ajuda" %}</a>-->
                         </li>
                     </ul>
