--- a/html/templates/partner.html
+++ b/html/templates/partner.html
@@ -24,29 +24,30 @@
                 </div>
                 <hr>
                 <form action="" method="post" class="form-cad-cliente" id="form-add-colab" novalidate="novalidate">
+                  {% csrf_token %}
                   <div class="form-group">
-                    <label for="nome">{% trans 'Nome completo' %}*</label>
+                    <label for="collab_name">{% trans 'Nome completo' %}*</label>
 
-                    <input type="text" class="form-control" id="nome" aria-describedby="nome" name="first_name" placeholder="{% trans 'Digite o nome' %}..." value="">
+                    <input type="text" class="form-control" id="collab_name" aria-describedby="nome" name="collab_name" placeholder="{% trans 'Digite o nome' %}..." value="">
 
                   </div>
                   <div class="form-group">
-                    <label for="email">{% trans 'E-mail' %}*</label>
+                    <label for="collab_email">{% trans 'E-mail' %}*</label>
 
-                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email" placeholder="{% trans 'Digite o e-mail' %}..." value="">
+                    <input type="email" class="form-control" id="collab_email" aria-describedby="emailHelp" name="collab_email" placeholder="{% trans 'Digite o e-mail' %}..." value="">
 
                   </div>
                   <div class="form-group">
-                    <label for="celular">{% trans 'Telefone' %}*</label>
+                    <label for="collab_phone">{% trans 'Telefone' %}*</label>
 
-                    <input type="number" class="form-control" id="celular" name="cell_phone" placeholder="{% trans 'Digite o telefone, celular de preferência' %}..." value="">
+                    <input type="number" class="form-control" id="collab_phone" name="collab_phone" placeholder="{% trans 'Digite o telefone, celular de preferência' %}..." value="">
 
                   </div>
 
                   <div class="form-group">
-                    <label for="mesg">{% trans 'Mensagem' %}*</label>
+                    <label for="collab_message">{% trans 'Mensagem' %}*</label>
 
-                      <textarea type="password" class="form-control" style="min-height: 200px;" id="mesg" name="password_confirmation" placeholder="{% trans 'Diga-nos um pouco sobre o que você faz, onde você mora e como costuma adquirir produtos' %}..."></textarea>
+                      <textarea class="form-control" style="min-height: 200px;" id="collab_message" name="collab_message" placeholder="{% trans 'Diga-nos um pouco sobre o que você faz, onde você mora e como costuma adquirir produtos' %}..."></textarea>
 
                   </div>
 
