--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -300,12 +300,12 @@
                 <div class="col-md-3">
                     <span class="copyright">{% trans "Copyright &copy; VOI Services 2018" %}</span>
                 </div>
-                <div class="col-md-7"><!--
+                <div class="col-md-6"><!--
                     <a href="https://prepshiptool.com" target="_blank" class="by download">
                         <img src="/static/img/logo-en-maior.png" width="20px" /> by {% trans "PrepShip Tool" %}</a>-->
-                    <span class="copyright"><strong>{% trans "Endereço" %}:</strong> 920 Lafayette Rd 204-B, Seabrook, NH 03874 | <strong>{% trans "Telefone" %}:</strong> 1 978 992 8417</span>
+                    <span class="copyright"><strong>{% trans "Endereço" %}:</strong> 920 Lafayette Rd 204-B, Seabrook, NH 03874 <br> <strong>{% trans "Telefone" %}:</strong> 1 978 992 8417</span>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-3">
                     <ul class="list-inline quicklinks">
                         <li>
                             <a href="{% url 'terms' %}">{% trans "Termos e Condições de Uso" %}</a>
