--- a/html/templates/base_shipment_details.html
+++ b/html/templates/base_shipment_details.html
@@ -38,7 +38,7 @@
                      <i class="fa fa-4x fa-info-circle"></i><br>
                      <p><strong>Não se esqueça que para esse envio você deve colocar como "FROM" na Amazon o endereço ao lado.  </strong><br></p><br>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 center">
                     <i class="fa fa-3x fa-map-marker"></i>
                     <p><strong>Endereço From:</strong><br><br>
                         920 Lafayette Rd
