--- a/myauth/templates/admin/myauth/userlotreport/change_list.html
+++ b/myauth/templates/admin/myauth/userlotreport/change_list.html
@@ -1,5 +1,5 @@
 {% extends "admin/change_list.html" %}
-{% load users %}
+{% load users_admin_inclusion_tag %}
 
 {% block result_list %}
   {% result_list cl %}
