--- a/store/templates/admin/store/lotreport/change_list.html
+++ b/store/templates/admin/store/lotreport/change_list.html
@@ -1,5 +1,5 @@
 {% extends "admin/change_list.html" %}
-{% load lots %}
+{% load lots_admin_inclusion_tag %}
 
 {% block result_list %}
   {% result_list cl %}
