--- a/html/templates/includes/layout-footer.html
+++ b/html/templates/includes/layout-footer.html
@@ -95,9 +95,11 @@
                             </li>
                         </ul>
                     </li>
+{% if LANGUAGE_CODE == 'pt' %}
                     <li class="tutorial">
                         <a href="{% trans '/pt/ajuda/' %}" target="_blank" class="abre-tutorial"><i class="fa fa-leanpub"></i> {% trans "Tutorial Plataforma" %}</a>
                     </li>
+{% endif %}
                     {% if user|has_product_perm:'view_products' or user|has_product_perm:'add_product' %}
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle logo-marca-link operacional-conf" data-toggle="dropdown"><i class="fa fa-archive"></i> {% trans "Estoque" %} <b class="caret"></b></a>
