Novo campo observação.

--- a/html/templates/store_lot_details.html
+++ b/html/templates/store_lot_details.html
@@ -131,6 +131,12 @@
                   <div class="col-md-6">
                       <p><strong>{% trans "ROI" %} (%):</strong><br> {{ product.roi|localize }}</p>
                   </div>
+
+                   <!-- Campo observação-->
+                  <div class="col-md-12">
+                        <p><strong>Observação:</strong><br> texto de observação.</p>
+                  </div>
+
                   {% if product.url %}
                   <!-- btn link para amazon -->
                   <div class="col-md-12">
