robustez da solução de estoque.

--- a/store/templates/admin/store/lot/change_form.html
+++ b/store/templates/admin/store/lot/change_form.html
@@ -1,9 +1,18 @@
 {% extends "admin/change_form.html" %}
-{% load lots static %}
+{% load i18n admin_urls lots static %}
 
 {% block extrastyle %}
 {{ block.super }}
 <link rel="stylesheet" type="text/css" href="{% static 'css/jquery-ui.min.css' %}" />
+{% endblock %}
+
+{% block breadcrumbs %}
+<div class="breadcrumbs">
+<a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
+&rsaquo; <a href="{% url 'admin:app_list' app_label=opts.app_label %}">{{ opts.app_config.verbose_name }}</a>
+&rsaquo; {% if has_change_permission %}<a href="{% url opts|admin_urlname:'changelist' %}">{{ opts.verbose_name_plural|capfirst }}</a>{% else %}{{ opts.verbose_name_plural|capfirst }}{% endif %}
+&rsaquo; {% if add or original is None %}{% blocktrans with name=opts.verbose_name %}Add {{ name }}{% endblocktrans %}{% else %}{{ original|truncatewords:"18" }}{% endif %}
+</div>
 {% endblock %}
 
 {% block submit_buttons_bottom %}{% my_submit_row original %}{% endblock %}
