--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -298,10 +298,10 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3"><br />
                     <span class="copyright">{% trans "Copyright &copy; VOI Services 2018" %}</span>
                 </div>
-                <div class="col-md-6"><!--
+                <div class="col-md-6"><br /><!--
                     <a href="https://prepshiptool.com" target="_blank" class="by download">
                         <img src="/static/img/logo-en-maior.png" width="20px" /> by {% trans "PrepShip Tool" %}</a>-->
                     <span class="copyright"><strong>{% trans "Endereço" %}:</strong> 920 Lafayette Rd 204-B, Seabrook, NH 03874 <br> <strong>{% trans "Telefone" %}:</strong> 1 978 992 8417</span>
@@ -310,7 +310,10 @@
                     <ul class="list-inline quicklinks">
                         <li>
                             <a href="{% url 'terms' %}">{% trans "Termos e Condições de Uso" %}</a>
-                            <!--<a href="{% url 'help' %}">{% trans "Ajuda" %}</a>-->
+
+                        </li>
+                        <li>
+                            <a href="{% url 'politicas' %}">{% trans "Políticas de Privacidade" %}</a>
                         </li>
                     </ul>
                 </div>
