ajustes pós merge, politicas de privacidade.

--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -313,7 +313,7 @@
 
                         </li>
                         <li>
-                            <a href="{% url 'politicas' %}">{% trans "Políticas de Privacidade" %}</a>
+                            <a href="{% url 'privacy_policy' %}">{% trans "Políticas de Privacidade" %}</a>
                         </li>
                     </ul>
                 </div>
