--- a/html/templates/store_lot_details.html
+++ b/html/templates/store_lot_details.html
@@ -134,7 +134,7 @@
 
                    <!-- Campo observação-->
                   <div class="col-md-12">
-                        <p><strong>Observação:</strong><br> texto de observação.</p>
+                        <p><strong>{% trans "Observação" %}:</strong><br> {{product.notes}}.</p>
                   </div>
 
                   {% if product.url %}
