--- a/html/templates/user_validation.html
+++ b/html/templates/user_validation.html
@@ -93,7 +93,7 @@
                 <div class="col-md-5">
                     <ul class="list-inline quicklinks">
                         <li>
-                            {% trans "<a href='/pt/termos-e-condicoes-de-uso.html'>Termos e Condições de Uso" %}</a>
+                            {% trans "<a href='/pt/termos-e-condicoes-de-uso/'>Termos e Condições de Uso" %}</a>
                         </li>
                     </ul>
                 </div>
