permitir alterar custo voi e arquivado mesmo de um lote vendido.

--- a/store/templates/admin/store/lot/change_form.html
+++ b/store/templates/admin/store/lot/change_form.html
@@ -14,5 +14,6 @@
 &rsaquo; {% if add or original is None %}{% blocktrans with name=opts.verbose_name %}Add {{ name }}{% endblocktrans %}{% else %}{{ original|truncatewords:"18" }}{% endif %}
 </div>
 {% endblock %}
-
+{% comment %}
 {% block submit_buttons_bottom %}{% my_submit_row original %}{% endblock %}
+{% endcomment %}
